# minimum-enclosing-circle

./: ARCHITEKTURA.md  README.md  ZadaniMarkdown.md  pyproject.toml
minimum_enclosing_circle/: __init__.py  __main__.py  mec.py  test_input.json  test_input.json_result.txt  test_output.txt
minimum_enclosing_circle.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  top_level.txt
vG-minimum_enclosing_circle/: main.py  pyproject.toml
vG-minimum_enclosing_circle/mec/: circle.py  utils.py
vG-minimum_enclosing_circle/tests/: test_circle.py
